Changelog for mk-heartbeat:

   * Added --pid option.
   * Using debug (MKDEBUG=1) and --daemonize now causes script to die.

2008-08-11: version 1.0.10

   * Files downloaded directly from SVN crashed due to version information.

2008-06-02: version 1.0.9

   * Get command-line options from POD.
   * --check output contained leading whitespace which broke Cacti.

2008-03-16: version 1.0.8

   * Added --setvars option (bug #1904689, bug #1911371).
   * Added --charset option (bug #1877548).

2008-02-10: version 1.0.7

   * Added --recurse option to check slaves to any depth.
   * Made mk-heartbeat explicitly close DB connection when done.

2008-01-05: version 1.0.6

   * Made suffixes for time options optional (bug #1858696).

2007-12-27: version 1.0.5

   * Added --stop, --sentinel, and --quiet options.
   * Added --replace option.

2007-12-16: version 1.0.4

   * Updated common code, added debugging.

2007-12-07: version 1.0.3

   * Updated common code.
   * Added --time, --interval and --skew options.
   * The combination of sleep() and alarm() did not work on some systems.

2007-11-04: version 1.0.2

   * Made command-line help easier to use.
   * Removed the dependency on Term::ReadKey.
   * Added support for PostgreSQL with the --dbidriver option.
   * Replaced some code with modules.

2007-10-03: version 1.0.1

   * --check hung forever.

2007-09-20: version 1.0.0

   * Initial release.