@@ -1,5 +1,6 @@
 Changelog for mk-heartbeat:
 
+   * Dies if heartbeat table does not have at least one row (issue 45).
    * Added --pid option.
    * Using debug (MKDEBUG=1) and --daemonize now causes script to die.
 
